changed conf v performance metric graphs

--- a/ltx/paper.tex
+++ b/ltx/paper.tex
@@ -875,9 +875,9 @@ To calculate performance metrics (both SFDA and ATA), one must specify a confide
 
 \begin{figure}
   \centering             
-  \subfloat[]{\includegraphics[width=0.5\textwidth]{../img/pets2000_sfda}}
-  \subfloat[]{\includegraphics[width=0.5\textwidth]{../img/pets2000_ata}}
-  \caption{The (a.) SFDA and (b.) ATA are shown, vs. confidence values from which an object's oval region is computed}
+  \subfloat[]{\includegraphics[width=0.5\textwidth]{../img/pets2000_pm}}
+  \subfloat[]{\includegraphics[width=0.5\textwidth]{../img/pets2001_pm}}
+  \caption{The SFDA (blue solid line) and ATA (red dashed line are) vs  confidence values from which an object's oval region is computed for (a.) PETS2000 and (b.) PETS2001 }
   \label{fig:pm_conf}
 \end{figure}
 
